Fix pictures to improve quality

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="rectangle"></div>
         <img class="img" src="img/One-Hive+.png" />
-        <img class="rectangle-2" src="img/productpicture.png" />
+        <img class="rectangle-2" src="img/community.png" />
         <img class="rectangle-3" src="img/stats.png" />
         <div class="frame">
           <div class="one-hive">
