Remove hyperlinks and add buttons

--- a/public/about.html
+++ b/public/about.html
@@ -22,15 +22,15 @@
           </div>
         </div>
         <header class="header">
-          <img class="FEC-logo" src="img/fec.png" />
+          <img class="FEC-logo" onclick="window.location.href='https://feccanada.org' "src="img/fec.png" />
           <div class="navbar">
-            <div class="text-wrapper-2"><a href="home">Home</a></div>
-            <div class="text-wrapper-2"><a href="about">About Us</a></div>
-            <div class="text-wrapper-2"><a href="product">Product</a></div>
-            <div class="text-wrapper-2"><a href="learn">Learn Beekeeping</a></div>
-            <div class="text-wrapper-2"><a href="adopt">Adopt a Beehive</a></div>
+            <div class="text-wrapper-2"><button onclick="window.location.href='home'">Home</div>
+            <div class="text-wrapper-2"><button onclick="window.location.href='about'">About Us</div>
+            <div class="text-wrapper-2"><button onclick="window.location.href='product'">Product</div>
+            <div class="text-wrapper-2"><button onclick="window.location.href='learn'">Learn Beekeeping</div>
+            <div class="text-wrapper-2"><button onclick="window.location.href='adopt'">Adopt a Beehive</div>
           </div>
-          <div class="login-button"><div class="text-wrapper-2"><a href=login>LOGIN</a></div></div>
+          <div class="login-button"><div class="text-wrapper-2"><button onclick="window.location.href='login'">LOGIN</div></div>
         </header>
       </div>
     </div>
