--- a/public/product.html
+++ b/public/product.html
@@ -15,15 +15,15 @@
         </div>
         <div class="rectangle"></div>
         <heading class="header">
-            <img class="FEC-logo" src="img/fec.png" />
-            <div class="navbar">
-              <div class="text-wrapper"><a href="home">Home</a></div>
-              <div class="text-wrapper"><a href="about">About Us</a></div>
-              <div class="text-wrapper"><a href="product">Product</a></div>
-              <div class="text-wrapper"><a href="learn">Learn Beekeeping</a></div>
-              <div class="text-wrapper"><a href="adopt">Adopt a Beehive</a></div>
-            </div>
-            <div class="login-button"><div class="text-wrapper"><a href=login>LOGIN</a></div></div>
+          <img class="FEC-logo" onclick="window.location.href='https://feccanada.org' "src="img/fec.png" />
+          <div class="navbar">
+            <div class="text-wrapper-2"><button onclick="window.location.href='home'">Home</div>
+            <div class="text-wrapper-2"><button onclick="window.location.href='about'">About Us</div>
+            <div class="text-wrapper-2"><button onclick="window.location.href='product'">Product</div>
+            <div class="text-wrapper-2"><button onclick="window.location.href='learn'">Learn Beekeeping</div>
+            <div class="text-wrapper-2"><button onclick="window.location.href='adopt'">Adopt a Beehive</div>
+          </div>
+          <div class="login-button"><div class="text-wrapper-2"><button onclick="window.location.href='login'">LOGIN</div></div>
         </heading>
         <img class="img" src="img/beehive.png" />
         <div class="one-hive">
@@ -35,7 +35,7 @@
             </p>
           </div>
         </div>
-        <div class="adopt-now-button"><div class="text-wrapper-2"><a href="payment">Pay By Donation</a></div></div>
+        <div class="adopt-now-button"><div class="text-wrapper-2"><button onclick="window.location.href='payment'">Pay By Donation</div></div>
       </div>
     </div>
   </body>
