--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
             </div>
           </div>
           <div class="frame-2">
-            <div class="div-wrapper"><div class="text-wrapper-3"><a href=adopt>Adopt Now</a></div></div>
-            <div class="div-wrapper"><div class="text-wrapper-3"><a href=product>Learn More</a></div></div>
+            <div class="div-wrapper"><div class="text-wrapper-3"><button onclick="window.location.href='adopt'">Adopt Now</div></div>
+            <div class="div-wrapper"><div class="text-wrapper-3"><button onclick="window.location.href='product'">Learn More</div></div>
           </div>
         </div>
         <div class="our-community">
@@ -42,7 +42,7 @@
             </p>
           </div>
           <div class="frame-3"></div>
-          <div class="div-wrapper"><div class="text-wrapper-3"><a href=adopt>Join the Family</a></div></div>
+          <div class="div-wrapper"><div class="text-wrapper-3"><button onclick="window.location.href='adopt'">Join the Family</div></div>
         </div>
         <div class="real-time-stats">
           <div class="div-2">
@@ -53,18 +53,18 @@
               ea commodo consequat.
             </p>
           </div>
-          <div class="div-wrapper"><div class="text-wrapper-3"><a href=product>Learn More</a></div></div>
+          <div class="div-wrapper"><div class="text-wrapper-3"><button onclick="window.location.href='product'">Learn More</div></div>
         </div>
         <header class="header">
-          <img class="FEC-logo" src="img/fec.png" />
+          <img class="FEC-logo" onclick="window.location.href='https://feccanada.org' "src="img/fec.png" />
           <div class="navbar">
-            <div class="text-wrapper-4"><a href="home">Home</a></div>
-            <div class="text-wrapper-4"><a href="about">About Us</a></div>
-            <div class="text-wrapper-4"><a href="product">Product</a></div>
-            <div class="text-wrapper-4"><a href="learn">Learn Beekeeping</a></div>
-            <div class="text-wrapper-4"><a href="adopt">Adopt a Beehive</a></div>
+            <div class="text-wrapper-4"><button onclick="window.location.href='home'">Home</div>
+            <div class="text-wrapper-4"><button onclick="window.location.href='about'">About Us</div>
+            <div class="text-wrapper-4"><button onclick="window.location.href='product'">Product</div>
+            <div class="text-wrapper-4"><button onclick="window.location.href='learn'">Learn Beekeeping</div>
+            <div class="text-wrapper-4"><button onclick="window.location.href='adopt'">Adopt a Beehive</div>
           </div>
-          <div class="login-button"><div class="text-wrapper-4"><a href=login>LOGIN</a></div></div>
+          <div class="login-button"><div class="text-wrapper-4"><button onclick="window.location.href='login'">LOGIN</div></div>
         </header>
       </div>
     </div>
